--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,8 @@ qa/testing.env
 qa/dev.env
 qa/staging.env
 qa/live.env
+utilities/modheaders_plugin.zip
+qa/utilities/modheaders_plugin.zip
 ################
 # End QA Additions
 ################
