Readme, docker config, and docker-compose updates

--- a/visual/docker_configs/current_remote_firefox.config
+++ b/visual/docker_configs/current_remote_firefox.config
@@ -60,14 +60,14 @@ spec.colorscheme.testrange = 6
 #
 galen.browserFactory.selenium.runInGrid = true
 galen.browserFactory.selenium.grid.url = http://selenium_hub:4444/wd/hub
-galen.browserFactory.selenium.grid.browser =firefox
+galen.browserFactory.selenium.grid.browser = firefox
 galen.browserFactory.selenium.grid.browserVersion = 58.0.1
 galen.browserFactory.selenium.grid.platform = LINUX
 
 # Default browser
 # ~~~~~~~~~~~~~~~~~~~~~~~~
 # A browser that should be used by default in case it was not specified in galen test
-galen.default.browser=chrome
+galen.default.browser=firefox
 
 # Driver paths
 # ~~~~~~~~~~~~~~~~~~~~~~~~
