--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -193,18 +193,12 @@ services:
       # depends_on:
       # - build
     environment:
-      BASE_URL: 'https://google.com'
+      BASE_URL: 'http://testapp.galenframework.com'
+      DRIVER: 'remote_ga_chrome'
     networks:
       - qa_network
     command:
-      bash -c '. /usr/tmp/qa/utilities/wait_for/wait-for-node.sh chrome:64.0.3282.140
-      --selenium_hub=selenium_hub -- galen test qa/visual/tests/responsive.test
-      --filter "Home page on * device in chrome browser"
-      --config qa/visual/docker_configs/last_remote_chrome.config
-      --jsonreport qa/visual/results/;
-      behave -f allure_behave.formatter:AllureFormatter
-      -o qa/utilities/allure/allure_results/ qa/visual/features/
-      --no-skipped --tags chrome-only --no-skipped'
+      bash -c 'set +e; . /usr/tmp/qa/utilities/wait_for/wait-for-node.sh chrome:64.0.3282.140 --selenium_hub=selenium_hub -- galen test qa/visual/tests/ --config qa/visual/docker_configs/current_remote_chrome.config --jsonreport qa/visual/reports/; set -e; behave -f allure_behave.formatter:AllureFormatter -o qa/utilities/allure/allure_results/ qa/visual/features/ --no-skipped --tags chrome-only'
 
   visual_last_chrome:
     build:
@@ -212,18 +206,12 @@ services:
     # depends_on:
       # - build
     environment:
-      BASE_URL: 'https://google.com'
+      BASE_URL: 'http://testapp.galenframework.com'
+      DRIVER: 'remote_ga_chrome'
     networks:
       - qa_network
     command:
-      bash -c '. /usr/tmp/qa/utilities/wait_for/wait-for-node.sh chrome:63.0.3239
-      --selenium_hub=selenium_hub -- galen test qa/visual/tests/responsive.test
-      --filter "Home page on * device in chrome browser"
-      --config qa/visual/docker_configs/last_remote_chrome.config
-      --jsonreport qa/visual/results/;
-      behave -f allure_behave.formatter:AllureFormatter
-      -o qa/utilities/allure/allure_results/ qa/visual/features/
-      --no-skipped--tags chrome-only'
+      bash -c 'set +e; . /usr/tmp/qa/utilities/wait_for/wait-for-node.sh chrome:63.0.3239 --selenium_hub=selenium_hub -- galen test qa/visual/tests/ --config qa/visual/docker_configs/last_remote_chrome.config --jsonreport qa/visual/reports/; set -e; behave -f allure_behave.formatter:AllureFormatter -o qa/utilities/allure/allure_results/ qa/visual/features/ --no-skipped --tags chrome-only'
 
   visual_current_firefox:
     build:
@@ -231,18 +219,12 @@ services:
     # depends_on:
       # - build
     environment:
-      BASE_URL: 'https://google.com'
+      BASE_URL: 'http://testapp.galenframework.com'
+      DRIVER: 'remote_firefox'
     networks:
       - qa_network
     command:
-      bash -c '. /usr/tmp/qa/utilities/wait_for/wait-for-node.sh firefox:58.0.1
-      --selenium_hub=selenium_hub -- galen test qa/visual/tests/responsive.test
-      --filter "Home page on * device in firefox browser"
-      --config qa/visual/docker_configs/last_remote_chrome.config
-      --jsonreport qa/visual/results/;
-      behave -f allure_behave.formatter:AllureFormatter
-      -o qa/utilities/allure/allure_results/ qa/visual/features/
-      --no-skipped --tags firefox-only'
+      bash -c 'set +e; . /usr/tmp/qa/utilities/wait_for/wait-for-node.sh firefox:58.0.1 --selenium_hub=selenium_hub -- galen test qa/visual/tests/ --config qa/visual/docker_configs/current_remote_firefox.config --jsonreport qa/visual/reports/; set -e; behave -f allure_behave.formatter:AllureFormatter -o qa/utilities/allure/allure_results/ qa/visual/features/ --no-skipped --tags firefox-only'
 
   visual_last_firefox:
     build:
@@ -250,18 +232,13 @@ services:
     # depends_on:
       # - build
     environment:
-      BASE_URL: 'https://google.com'
+      BASE_URL: 'http://testapp.galenframework.com'
+      DRIVER: 'remote_firefox'
     networks:
       - qa_network
     command:
-      bash -c '. /usr/tmp/qa/utilities/wait_for/wait-for-node.sh firefox:57.0.4
-      --selenium_hub=selenium_hub -- galen test qa/visual/tests/responsive.test
-      --filter "Home page on * device in firefox browser"
-      --config qa/visual/docker_configs/last_remote_chrome.config
-      --jsonreport qa/visual/results/;
-      behave -f allure_behave.formatter:AllureFormatter
-      -o qa/utilities/allure/allure_results/ qa/visual/features/
-      --no-skipped --tags firefox-only'
+      bash -c 'set +e; . /usr/tmp/qa/utilities/wait_for/wait-for-node.sh firefox:57.0.4 --selenium_hub=selenium_hub -- galen test qa/visual/tests/ --config qa/visual/docker_configs/last_remote_firefox.config --jsonreport qa/visual/reports/; set -e; behave -f allure_behave.formatter:AllureFormatter -o qa/utilities/allure/allure_results/ qa/visual/features/ --no-skipped --tags firefox-only'
+
 
   security_tests:
     build:
