--- a/security/requirements.txt
+++ b/security/requirements.txt
@@ -1,4 +1,4 @@
 behave==1.2.6
-selenium==3.11.0
-zapcli==0.8.0
-python-owasp-zap-v2.4==0.0.11
+selenium==3.12.0
+python-owasp-zap-v2.4==0.0.12
+requests==2.18.1
