--- a/visual/docker_configs/current_remote_firefox.config
+++ b/visual/docker_configs/current_remote_firefox.config
@@ -78,7 +78,7 @@ galen.default.browser=firefox
 
 # Exit with fail code in case of any failures
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# galen.use.fail.exit.code = true
+galen.use.fail.exit.code = fail
 
 
 # Test file extension for standard test runner
