--- a/visual/docker_configs/last_remote_firefox.config
+++ b/visual/docker_configs/last_remote_firefox.config
@@ -78,7 +78,7 @@ galen.browserFactory.selenium.grid.platform = LINUX
 
 # Exit with fail code in case of any failures
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# galen.use.fail.exit.code = true
+galen.use.fail.exit.code = false
 
 
 # Test file extension for standard test runner
